--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?selectableItemBackground"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -10,10 +11,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <com.arifinbardansyah.android.bakingapps.utility.SixteenNineImageView
             android:id="@+id/iv_recipe"
             android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:layout_height="0dp"/>
 
         <TextView
             android:id="@+id/tv_recipe_name"
